--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -36,7 +36,7 @@
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium space-x-3">
                 <%= link_to "Edit", edit_category_path(category), class: "text-teal-600 dark:text-teal-400 hover:text-teal-900" %>
-                <%= button_to "Delete", category_path(category), method: :delete, data: { confirm: "Are you sure?" }, class: "text-red-600 dark:text-red-400 hover:text-red-900" %>
+                <%= button_to "Delete", category_path(category), method: :delete, data: { turbo_confirm: "Are you sure you want to delete this category?" }, class: "text-red-600 dark:text-red-400 hover:text-red-900" %>
               </td>
             </tr>
           <% end %>
