--- a/app/views/checklists/index.html.erb
+++ b/app/views/checklists/index.html.erb
@@ -23,7 +23,7 @@
             </div>
             <div class="flex items-center space-x-3">
               <%= link_to "Edit", edit_checklist_path(checklist), class: "text-teal-600 dark:text-teal-400 hover:text-teal-900" %>
-              <%= button_to "Delete", checklist_path(checklist), method: :delete, data: { confirm: "Are you sure?" }, class: "text-red-600 dark:text-red-400 hover:text-red-900" %>
+              <%= button_to "Delete", checklist_path(checklist), method: :delete, data: { turbo_confirm: "Are you sure you want to delete this checklist?" }, class: "text-red-600 dark:text-red-400 hover:text-red-900" %>
             </div>
           </div>
 
