--- a/app/views/needs/my_needs.html.erb
+++ b/app/views/needs/my_needs.html.erb
@@ -63,7 +63,7 @@
               <div class="ml-4 flex flex-col space-y-2">
                 <%= link_to "View Details", need_path(need), class: "text-sm text-teal-600 dark:text-teal-400 hover:text-teal-800" %>
                 <% if signup.can_cancel? %>
-                  <%= button_to "Cancel Signup", cancel_signup_need_path(need), method: :delete, data: { confirm: "Are you sure you want to cancel this signup?" }, class: "text-sm text-red-600 dark:text-red-400 hover:text-red-800" %>
+                  <%= button_to "Cancel Signup", cancel_signup_need_path(need), method: :delete, data: { turbo_confirm: "Are you sure you want to cancel this signup?" }, class: "text-sm text-red-600 dark:text-red-400 hover:text-red-800" %>
                 <% else %>
                   <span class="text-xs text-gray-500 dark:text-gray-400">Cannot cancel (< 24hrs)</span>
                 <% end %>
