--- a/app/views/needs/show.html.erb
+++ b/app/views/needs/show.html.erb
@@ -184,7 +184,7 @@
                 <% end %>
                 <% if @user_signup.can_cancel? %>
                   <%= button_to "Cancel", cancel_signup_need_path(@need), method: :delete, 
-                      data: { confirm: "Are you sure you want to cancel your signup?" },
+                      data: { turbo_confirm: "Are you sure you want to cancel your signup?" },
                       class: "px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700" %>
                 <% end %>
               </div>
@@ -298,7 +298,7 @@
           <%= button_to "Approve & Publish", approve_need_path(@need), method: :patch,
               class: "px-6 py-3 bg-green-600 text-white rounded-md hover:bg-green-700" %>
           <%= button_to "Reject", reject_need_path(@need), method: :patch,
-              data: { confirm: "Are you sure you want to reject this need?" },
+              data: { turbo_confirm: "Are you sure you want to reject this need?" },
               class: "px-6 py-3 bg-red-600 text-white rounded-md hover:bg-red-700" %>
         </div>
       </div>
