--- a/app/views/needs/index.html.erb
+++ b/app/views/needs/index.html.erb
@@ -4,7 +4,7 @@
       <h1 class="text-3xl font-bold mb-2">All Needs</h1>
       <p class="text-gray-600 dark:text-gray-400">Browse and sign up for needs in our community</p>
     </div>
-    <%= link_to "Create New Need", new_need_path, class: "px-4 py-2 bg-teal-600 text-white rounded-md font-medium hover:bg-teal-700" %>
+    <%= link_to "+ Create Need or Event", new_need_path, class: "px-4 py-2 bg-teal-600 text-white rounded-md font-medium hover:bg-teal-700" %>
   </div>
 
   <!-- Filters and Search -->
